rg_sources = ['egg-signal-group.h',
	      'egg-signal-group.c',
	'realtime-graphs.h',
	'rg-column.c',
	'rg-column.h',
	'rg-column-private.h',
	'rg-cpu-graph.c',
	'rg-cpu-graph.h',
	'rg-cpu-table.c',
	'rg-cpu-table.h',
	'rg-graph.c',
	'rg-graph.h',
	'rg-line-renderer.c',
	'rg-line-renderer.h',
	'rg-straight-renderer.c',
	'rg-straight-renderer.h',
	'rg-renderer.c',
	'rg-renderer.h',
	'rg-ring.c',
	'rg-ring.h',
	'rg-table.c',
	'rg-table.h']
rg_lib = shared_library('rg', rg_sources, 
		        dependencies: [glib_dep, gtk_dep] )
